# llm_ops

./: .gitignore  README.md
cuda/cutlass_fa/: CMakeLists.txt  run.sh
cuda/cutlass_fa/interface/: cutlass_fa.h
cuda/cutlass_fa/kernel/: cutlass_fa.cu  flash.h  utils.h
cuda/cutlass_fa/ncu/: Makefile  benchmark_cutlass_fa.cu  test_cutlass_fa.cu
cuda/cutlass_gemm/: CMakeLists.txt
cuda/cutlass_gemm/interface/: cutlass_gemm.h
cuda/cutlass_gemm/kernel/: cutlass_gemm.cu  cutlass_gemm_impl.cu
cuda/cutlass_gemm/ncu/: Makefile  benchmark_cutlass_gemm.cu  run.sh  test_cutlass_gemm.cu
cuda/gemm/kernel/: gemm_kernel.cu  gemm_kernel.h
cuda/gemm/ncu/: build.sh  prof.sh  test_gemm.cpp
cuda/reduce/: reduce.cu  reduce_test  run.sh
cuda/rmsnorm/: rmsnorm_module.py  setup.py  test_rmsnorm.py
cuda/rmsnorm/interface/: rmsnorm_interface.cu
cuda/rmsnorm/kernel/: rmsnorm_kernel.cu  rmsnorm_kernel.h
cuda/rmsnorm/ncu/: build.sh  prof.sh  test_rmsnorm.cpp
cuda/transpose/: run.sh  transpose.cu
cuda/triton_fa/: test.py
cuda/triton_fa/kernel/: fa_v1.py
